# MSA-App

./: README.md  network_interaction_20240227-193727.csv  pyproject.toml  results.json  results_20240130-223721.json  results_iterative_20240130-221311.json  results_iterative_20240227-193727.json  results_iterative_20240320-123109.json  shapley values.csv  shapley_values.csv  shapley_values_20240130-223721.csv  shapley_values_iterative_20240130-221311.csv  shapley_values_iterative_20240227-193727.csv  shapley_values_iterative_20240320-123109.csv
.github/workflows/: publish.yml
data/: NumVoxels.xlsx  create_synthetic_data.py  example data.xlsx  example_data.xlsx  nihss_scores.csv  nihss_scores_full_msa.csv  num_voxels.csv  num_voxels_full_msa.csv  roi_data.csv  roi_data_full_msa.csv
msa_app/: __init__.py  gui.py  main.py  ml_models.py  msa.py
tests/: test_ml_models.py  test_msa.py  test_msa_long.py
