[tool.poetry]
name = "msa-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
customtkinter = "^5.2.1"
pyinstaller = "^6.2.0"
msapy = "^1.5"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
