[tool.poetry]
name = "msa-app"
version = "0.6.1"
description = ""
authors = ["Shrey Dixit <shrey.akshaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
customtkinter = "^5.2.1"
pyinstaller = "^6.2.0"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
scipy = "^1.11.4"
matplotlib = "^3.8.3"
msapy = "^1.7.1"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
